<resources>
    <string name="app_name">Juegos</string>
    <string name="titulo">JUEGOS</string>
    <string name="contentDescription">Botón de Conecta 4</string>
    <string name="nosepuedecolocarficha">No se puede colocar ficha</string>
    <string name="fin_del_juego">La partida ha terminado</string>
    <string name="r1">r1</string>
    <string name="cha_cha_cha">CHA CHA CHA</string>
    <string name="gameOverTitle">Fin del juego</string>
    <string name="seleccione_el_juego_al_que_quiera_acceder">Seleccione el juego al que quiera acceder</string>
    <string name="conecta_4">Conecta 4</string>
    <string name="ganaste">Ganaste!!</string>
    <string name="gano">Gano la maquina, perdiste :(</string>
    <string name="estavacio">Esta vacio</string>
    <string name="eslamasbaja">Posicion mas baja</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="acerca_de">Acerca de</string>
    <string name="Conecta4">CONECTA 4</string>
    <string name="gameOverMessage">¿Quiere jugar otra partida?</string>
    <string name="initialImage">initial image</string>
    <string name="bienvenidos_a_juegos">Bienvenidos a Juegos</string> <string name="firstCategoryPrefTitle">Datos personales</string>
    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para teclear el nombre del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="listPrefTitle">Color de las fichas</string>
    <string name="listPrefSummary">Pulse para mostrar la lista</string>
    <string name="listPrefDialogTitle">Elija la figura inicial</string>
    <string name="preferencesText">Ajustes</string>

</resources>
