<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/firstCategoryPrefTitle">
        <EditTextPreference
            android:key="playerName"
            android:title="@string/editTextPrefTitle"
            android:summary="@string/editTextPrefSummary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/secondCategoryPrefTitle">
   		<ListPreference 
            android:key="color_fichas"
            android:title="@string/listPrefTitle"
            android:summary="@string/listPrefSummary"
            android:entries="@array/fichas"
            android:entryValues="@array/codigosFichas"
            android:dialogTitle="@string/listPrefDialogTitle"/>
    </PreferenceCategory>
</PreferenceScreen>
