<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/seleccione_el_juego_al_que_quiera_acceder"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cha_cha_cha"
            android:id="@+id/buttonChaChaCha"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conecta_4"
            android:id="@+id/buttonConecta4"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>